animation on scroll

--- a/components/Contact/DirectCard.module.scss
+++ b/components/Contact/DirectCard.module.scss
@@ -1,6 +1,6 @@
 .container{
     width: 50%;
-    height: 100px;
+    height: 16.6%;
     padding: 25px;
     justify-content: center;
     position: relative;
