Responsive for 768, 600 and 425px body

--- a/components/aboutme/AboutMeInfo.module.scss
+++ b/components/aboutme/AboutMeInfo.module.scss
@@ -5,3 +5,16 @@
     padding: 20px;
     justify-content: space-between;
 }
+
+@media only screen and (max-width: 768px) {
+    .card{
+        flex-direction: column-reverse;
+    }
+}
+
+
+@media only screen and (max-width: 425px){
+    .card{
+        padding: 0;
+    }
+}
