--- a/components/Contact/ContactForm.module.scss
+++ b/components/Contact/ContactForm.module.scss
@@ -63,3 +63,16 @@
         }
       }
 }
+
+@media only screen and (max-width: 768px){
+    .form{
+        height: 80%;
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .form{
+        width: 90%;
+    }
+}
