--- a/components/Contact/DirectCard.module.scss
+++ b/components/Contact/DirectCard.module.scss
@@ -22,3 +22,27 @@
         height: 100%;
     }
 }
+
+@media only screen and (max-width: 768px){
+    .container{
+        left: 0;
+        height: 80%;
+
+        &:hover{
+            width: 50%;
+            left: 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .container{
+        padding: 15px;
+    }
+}
+
+@media only screen and (max-width: 425px){
+    .container{
+        padding: 10px;
+    }
+}
