--- a/components/Contact/DirectContact.module.scss
+++ b/components/Contact/DirectContact.module.scss
@@ -5,3 +5,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+@media only screen and (max-width: 768px){
+    .container{
+        flex-direction: row;
+        width: 100%;
+        align-items: flex-end;
+    }
+}
