--- a/components/aboutme/CardCv.module.scss
+++ b/components/aboutme/CardCv.module.scss
@@ -37,3 +37,10 @@
         height: 100%;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .cardCv{
+        width: 100%;
+        height: 100px;
+    }
+}
