--- a/components/footer/Copy.module.scss
+++ b/components/footer/Copy.module.scss
@@ -30,3 +30,15 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px){
+    .copy{
+        h2{
+            font-size: 18px;
+        }
+
+        p{
+            font-size: 15px;
+        }
+    }
+}
