--- a/components/projects/ProjectsSection.module.scss
+++ b/components/projects/ProjectsSection.module.scss
@@ -8,3 +8,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media only screen and (max-width: 600px){
+    .secondaryContainer{
+        justify-content: center;
+    }
+}
