--- a/components/projects/SecondaryProjectCard.module.scss
+++ b/components/projects/SecondaryProjectCard.module.scss
@@ -52,3 +52,18 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px){
+    .card{
+        width: 45%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .card{
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 425px){
+}
