--- a/components/config/CloseButton.module.scss
+++ b/components/config/CloseButton.module.scss
@@ -32,3 +32,12 @@
         clip-path: inset(0 0 0 0);
     }
 }
+
+@media only screen and (max-width: 768px){
+    .hover{
+        width: 20px;
+        height: 20px;
+        top: 10px;
+        right: 10px;
+    }
+}
