bar loader, contact from functions, and spinners

--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -12,6 +12,10 @@
     }
 }
 
-@media only screen and (max-width: 768px){
-
+@media only screen and (max-width: 540px){
+    .footer{
+        .presentation{
+            flex-direction: column-reverse;
+        }
+    }
 }
