--- a/components/footer/Copy.module.scss
+++ b/components/footer/Copy.module.scss
@@ -44,7 +44,7 @@
     }
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 540px){
     .copy{
         &::after{
             display: none;
@@ -52,10 +52,18 @@
         
         h2{
             font-size: 16px;
+            text-align: center;
         }
         
         p{
+            text-align: center;
             font-size: 13px;
+
+            &.copyright{
+                position: relative;
+            }
         }
+
+        width: 100%;
     }
 }
