--- a/components/config/theme/ThemeImage.module.scss
+++ b/components/config/theme/ThemeImage.module.scss
@@ -6,6 +6,14 @@
     align-items: center;
     height: 99%;
     width: 23%;
+    margin-top: 50px;
+
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4){
+        margin-top: 0px;
+    }
 
     h2{
         font-size: 22px;
