--- a/components/config/theme/ThemesScreen.module.scss
+++ b/components/config/theme/ThemesScreen.module.scss
@@ -26,6 +26,7 @@
 .images{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 80%;
     height: 60%;
     overflow: scroll;
