--- a/components/projects/SecondaryProjectCard.module.scss
+++ b/components/projects/SecondaryProjectCard.module.scss
@@ -26,8 +26,10 @@
     ul{
         display: flex;
         margin-top: 10px;
-        li:not(:first-child){
-            margin-left: 10px;
+        flex-wrap: wrap;
+        li{
+            margin-left: 15px;
+            margin-top: 5px;
         }
     }
 
